--- a/.gitmodules
+++ b/.gitmodules
@@ -3,10 +3,10 @@
 	url = https://github.com/rmaphoh/RETFound_MAE.git
 [submodule "MM-Retinal"]
 	path = MM-Retinal
-	url = https://github.com/lxirich/MM-Retinal.git
+	url = https://github.com/thaotnguyen/MM-Retinal.git
 [submodule "LLaVA"]
 	path = LLaVA
-	url = https://github.com/haotian-liu/LLaVA.git
+	url = https://github.com/thaotnguyen/LLaVA.git
 [submodule "DeepSeek-VL2"]
 	path = DeepSeek-VL2
-	url = https://github.com/deepseek-ai/DeepSeek-VL2.git
+	url = https://github.com/thaotnguyen/DeepSeek-VL2.git
