--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,12 @@
 [submodule "DeepSeek-VL2"]
 	path = DeepSeek-VL2
 	url = https://github.com/thaotnguyen/DeepSeek-VL2.git
+[submodule "LLaVA-Med"]
+	path = LLaVA-Med
+	url = https://github.com/microsoft/LLaVA-Med.git
+[submodule "OpenBioMed"]
+	path = OpenBioMed
+	url = https://github.com/PharMolix/OpenBioMed.git
+[submodule "BiomedGPT"]
+	path = BiomedGPT
+	url = https://github.com/taokz/BiomedGPT.git
